# afl_fantasy_ios

./: .editorconfig  .env.example  .gitignore  .replit  .swiftformat  .swiftlint.yml  .warp.md  AFL_FANTASY_iOS_ENHANCEMENTS.md  AFL_FANTASY_iOS_REVIEW_REPORT.md  AFL_FANTASY_iOS_UX_REVIEW.md  AFL_Fantasy_iOS_Standards_Audit.md  API_INTEGRATION_COMPLETE.md  BUILD_FIX_SUMMARY.md  BUILD_STATUS.md  CONSOLIDATION_COMPLETE.md  CONTRIBUTING.md  DASHBOARD_GUIDE.md  DEPLOYMENT_SUCCESS.md  Dockerfile  Dockerfile.frontend  FINAL_SCRAPING_GUIDE.md  FRONTEND_AUDIT_REPORT.md  FRONTEND_FIXES_COMPLETE.md  HIG_COMPLIANCE_REPORT.md  INTEGRATION_COMPLETE.md  LICENSE  PERSONALIZATION_FEATURES.md  PREMIUM_DASHBOARD_FEATURES.md  PROJECT_STRUCTURE.md  Package.resolved  Package.swift  QUALITY_REPORT.md  QUICK_START.md  README.md  README_SCRAPER.md  REORGANIZATION_COMPLETE.md  ROOT_CLEANUP_COMPLETE.md  SCRAPER_USAGE_GUIDE.md  UI_FEATURE_GAP.md  UI_UX_ENHANCEMENT_ANALYSIS.md  (+58 more)
.build/: build.db-journal  debug.yaml  plugin-tools.yaml  workspace-state.json
.cleanup_backup/: api_server.py
.warp/: workflows.yaml
AFL Fantasy Tests/: DashboardViewModelTests.swift
AFL Fantasy.xcodeproj/: project.pbxproj
AFLFantasyIntelligence/: .editorconfig  .swiftlint.yml  AFL_FANTASY_INTELLIGENCE_REVIEW_FINAL.md  APP_STATUS_SUMMARY.md  IMPLEMENTATION_PLAN.md  add_files_to_project.py
AFLFantasyProWidget/: WidgetViews.swift
AFL_Fantasy_Platform_Documentation/: API_ENDPOINTS.md  README.md  TESTING_CHECKLIST.md
AFL_Fantasy_Unified/: project.yml
Sources/: AFLFantasyApp.swift  ContentView.swift
archived_apps/: README_ARCHIVED.md
backend/: README.md  risk-direct.ts  setup_env.sh  start_server.sh  trade-tools.ts
dashboards/: README.md  dashboard.js  index.html
data/: sample_players.sql  (+1 more)
docs/: BUILD.md  FAQ.md  (+54 more)
server-python/: AFL_Fantasy_Player_URLs.xlsx  Dockerfile  add_files_to_project.py  add_profile_to_project.py  afl_scraper.py  analyze_scraped_data.py  api_server.py  api_server_unified.py  api_server_ws.py  create_real_player_data.py  create_sample_data.py  pyproject.toml  requirements-minimal.txt  requirements.txt  test_report.json  test_scraper_integration.py  test_setup.py  test_websocket.py  update_sample_data.py
server-python/api/: health.py
server-python/scrapers/: advanced-scraper.py  sync_players.py
server-python/scripts/: quality.sh
server-python/utils/: api-discovery.py
(+2853 files in other folders)
