[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "flask-cors>=5.0.1",
    "flask>=3.1.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "numpy>=2.2.5",
    "lxml>=5.4.0",
    "html5lib>=1.1",
    "apscheduler>=3.11.0",
    "selenium>=4.33.0",
    "webdriver-manager>=4.0.2",
    "google-generativeai>=0.8.0",
]
